completed home page xml
completed home page xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="deep_purple">#757BED</color>
+    <color name="white">#FFFFFF</color>
+    <color name="font_color">#7E7E7F</color>
+
 </resources>
