--- a/app/src/main/res/layout/filter_year_recycle_view.xml
+++ b/app/src/main/res/layout/filter_year_recycle_view.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    >
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/horizontal_recycle_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fliter_year_recycle_view"
         android:scrollbars="none"
+        android:paddingTop="100dp"
+        android:paddingLeft="30dp"
+        android:layout_centerInParent="true"
+
         ></androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
