--- a/app/src/main/res/layout/fliter_year_list_view.xml
+++ b/app/src/main/res/layout/fliter_year_list_view.xml
@@ -12,11 +12,11 @@
             android:fontFamily="@font/roboto_medium"
             android:textSize="14dp"
             android:text="asd"
-            android:id="@+id/fliter_item"
+            android:id="@+id/fliter_year_item"
             android:paddingTop="5dp"
-            android:paddingRight="15dp"
+            android:paddingRight="28dp"
             android:paddingBottom="5dp"
-            android:paddingLeft="15dp"
+            android:paddingLeft="28dp"
             android:background="@drawable/custom_filter_btn"
             android:textColor="@android:color/white"
             >
