--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="deep_purple">#757BED</color>
     <color name="white">#FFFFFF</color>
     <color name="font_color">#7E7E7F</color>
-
+    <color name="filter_borde">#8E92F8</color>
 </resources>
