--- a/app/src/main/res/layout/take_photo_outcome_layout.xml
+++ b/app/src/main/res/layout/take_photo_outcome_layout.xml
@@ -2,10 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <?xml version="1.0" encoding="utf-8"?>
 
-    
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <RelativeLayout
         android:orientation="horizontal" android:layout_width="match_parent"
         android:layout_height="70dp"
         android:background="@color/white"
